# tempura

./: .env.example  .gitignore  INSTALL.md  QUICKSTART.md  README.md  TROUBLESHOOTING.md  diagnose.py  install.sh  pyproject.toml  test_api_key.py
tempura/: __init__.py  __main__.py  app.py  cli.py
tempura/api/: __init__.py  cache.py  client.py  models.py
tempura/assets/: __init__.py  animations.py  ascii_art.py  styles.tcss
tempura/config/: settings.py  storage.py
tempura/screens/: __init__.py  current_weather.py  forecast.py  hourly.py  locations.py  main_menu.py  settings.py
tempura/weather/: __init__.py  formatter.py  units.py
tempura/widgets/: animated_icon.py  ascii_weather.py  weather_card.py
tests/: __init__.py
